--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,23 @@ body {
     display: flex;
     gap: 30px;
   }
+  
+article {
+    position: relative;
+    perspective: 1000px;
+    width: 300px;
+    height: 300px;
+  }
+  
+  article header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 40px;
+    margin-bottom: 26px;
+  }
+  
+  article header h2 {
+    font-size: 20px;
+  }
+  
