article input styling

--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,27 @@ article {
     transform: rotateY(180deg);
   }
     
+input {
+    position: absolute;
+    scale: 0;
+  }
+  
+  input:checked ~ article .back {
+    transform: rotateY(0);
+  }
+  
+  input:checked ~ article .front {
+    transform: rotateY(-180deg);
+  }
+  
+  article var {
+    font-style: normal;
+    font-size: 80px;
+    line-height: 1;
+  }
+  
+  article h3 {
+    margin: 0 0 30px;
+    font-weight: 500;
+  }
+  
