--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,24 @@ input {
     font-weight: 500;
   }
   
+#summary :is(var, h3) {
+    color: #3b82f6;
+  }
+  
+  #overdue :is(var, h3) {
+    color: #ef4444;
+  }
+  
+  #features :is(var, h3) {
+    color: #22c55e;
+  }
+  
+  article :is(h4, p) {
+    opacity: 0.5;
+    font-size: 20px;
+  }
+  
+  article p {
+    margin-top: 76px;
+  }
+  
